hphp/hack/test/typecheck/array_filter1.php.like_types.exp
File "array_filter1.php", line 4, characters 16-16:
Invalid argument (Typing[4110])
File "stdlib/builtins_array.hhi", line 82, characters 27-39:
Expected ~Container<[unresolved]> because it is an unenforceable type
File "array_filter1.php", line 4, characters 16-16:
But got int
